--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,9 @@
 services:
   postgres:
-    image: 'postgres:latest'
+    image: 'postgres:16.0'
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - 'POSTGRES_DB=testdb'
+      - 'POSTGRES_PASSWORD=testpass'
+      - 'POSTGRES_USER=testuser'
     ports:
-      - '5432'
+      - '5432:5432'
